Fix line spacing in homepage quicklinks

--- a/deploy/wp-content/themes/twentytwenty-child/style.css
+++ b/deploy/wp-content/themes/twentytwenty-child/style.css
@@ -59,10 +59,10 @@
 .home.singular:not(.overlay-header) .entry-header .hp-buttons__button:visited,
 .home.singular:not(.overlay-header) .entry-header .hp-buttons__button:hover,
 .home.singular:not(.overlay-header) .entry-header .hp-buttons__button:active {
-    /*background: rgba(0, 0, 255, 0.1);*/
     padding: 0.25rem;
     width: 15rem;
     font-size: 2rem;
+    line-height: 1.3;
     font-weight: 900;
     text-transform: uppercase;
     text-decoration: none;
